[package]
name = "drogue-thing"
version = "0.0.1"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]

# Basics

embedded-hal = "0.2"
heapless = "0.5"

# Cortex M

cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.3"

# STM32F7xx

stm32f7 = { version = "0.11.0", features = ["stm32f7x3", "rt"] }
stm32f7xx-hal = { version = "0.2", features = ["stm32f723"] }

# Network

drogue-esp8266 = "0.2"
drogue-network = "0.2"
drogue-tls = "0.1"

# Logging

log = "0.4.11"
rtt-target = { version = "0.2.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-logger = { version = "0.1" }

# Data handling

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.1"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
#stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal.git" }
drogue-esp8266 = { path = "../drogue-esp8266" }
drogue-network = { path = "../drogue-network" }
drogue-tls = { path = "../drogue-tls/drogue-tls" }
drogue-tls-sys = { path = "../drogue-tls/drogue-tls-sys" }
stm32f7xx-hal = { path = "../stm32f7xx-hal" }
