[package]
name = "drogue-thing"
version = "0.0.1"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[unstable]
features = ["host_dep"]

[features]
custom_wifi = []
wait = [] # wait on startup for user button
stm32f4xx = []
stm32f7xx = []
display = ["embedded-graphics", "ssd1351"]

stm32f411 = [
    "stm32f4xx",
    "stm32f4xx-hal",
    "stm32f4/stm32f411",
    "stm32f4/rt",
    "stm32f4xx-hal/stm32f411",
    "stm32f4xx-hal/rt"
]
stm32f723 = [
    "stm32f7xx",
    "stm32f7xx-hal",
    "stm32f7/stm32f7x3",
    "stm32f7/rt",
    "stm32f7xx-hal/stm32f723",
    "stm32f7xx-hal/rt"
]

mpu = ["cortex-mpu"]
bsec = ["drogue-bsec"]
publish = []

[dependencies]

# Basics

embedded-hal = "0.2"
embedded-time = "0.10"
void = { version = "1", default-features = false }

embedded-graphics = { version = "0.6", optional = true }
ssd1351 = { version = "0.3", features = ["graphics"], optional = true }

heapless = "0.5"

#nb = "1"

# Cortex M

cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5"
cortex-mpu = { version = "0.4", optional = true }

# STM32F4xx

stm32f4 = { version = "0.11", optional = true }
stm32f4xx-hal = { version = "0.8", optional = true }

# STM32F7xx

stm32f7 = { version = "0.11", optional = true }
stm32f7xx-hal = { version = "0.2", optional = true }

# Network

drogue-esp8266 = { version = "0.3.1", features = [] } # 2k
drogue-http-client = "0.0.2"
drogue-network = "0.2"
drogue-tls = { version = "0.1", features = ["fewer-tables", "out-buffer-2k"] }
drogue-bme680 = "0.2"
drogue-embedded-timer = "0.2.1"
drogue-bsec = { version = "0.1", optional = true }

# Logging

log = "0.4.11"
rtt-target = { version = "0.2.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-logger = { version = "0.1" }

# Errors

snafu = { version = "0.6", default-features = false }

# Data handling

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.1"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
#stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal.git" }
#drogue-http-client = { path = "../drogue-http-client" }
#drogue-esp8266 = { path = "../drogue-esp8266" }
#drogue-bme680 = { path = "../drogue-bme680" }

drogue-bsec = { path = "../drogue-bsec" }

#drogue-network = { path = "../drogue-network" }
#drogue-network = { git = "https://github.com/drogue-iot/drogue-network.git" }

drogue-tls = { path = "../drogue-tls/drogue-tls" }
drogue-tls-sys = { path = "../drogue-tls/drogue-tls-sys" }

#stm32f7xx-hal = { path = "../stm32f7xx-hal" }
# Required for UART5 until a new version has been released
stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal.git" }

#drogue-embedded-timer = { path = "../drogue-embedded-timer" }
# Required for DelayMs/DelayUs trait implementation which is not yet released
drogue-embedded-timer = { git = "https://github.com/drogue-iot/drogue-embedded-timer.git" }

# ssd1351 = { path = "../ssd1351" }
ssd1351 = { git = "https://github.com/ctron/ssd1351.git", branch = "feature/update_deps_1" }
